# isi_test_project

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/: manage.py
backend/isi_project/: asgi.py  urls.py  wsgi.py
backend/isi_project/settings/: __init__.py
backend/isi_project/settings/components/: _apps.py  _base.py  _database.py  _logs.py  _middleware.py  _rest.py  _storage.py  _templates.py
backend/isi_project/settings/environments/: local.py
backend/threads/: admin.py  filters.py  models.py  serializers.py  service.py  urls.py  views.py
backend/threads/fixtures/: initial_data.json
backend/threads/migrations/: 0001_initial.py
backend/threads/tests/: factories.py  test_api.py
